cmake_minimum_required(VERSION 3.20)
project(cpp_module)

set(CMAKE_CXX_STANDARD 98)

add_executable(cpp_module day00/ex00/megaphone.cpp day00/ex01/Contact.cpp day00/ex01/Contact.hpp day00/ex01/PhoneBook.cpp day00/ex01/PhoneBook.hpp day00/ex01/main.cpp day00/ex02/Account.cpp day00/ex02/Account.hpp day00/ex02/tests.cpp day01/ex00/Zombie.cpp day01/ex00/Zombie.hpp day01/ex00/main.cpp day01/ex00/newZombie.cpp day01/ex00/randomChump.cpp day01/ex01/main.cpp day01/ex01/ZombieHorde.cpp day01/ex02/main.cpp day01/ex03/Weapon.cpp day01/ex03/Weapon.hpp day01/ex03/HumanA.cpp
        day01/ex03/HumanA.hpp day01/ex03/HumanB.cpp day01/ex03/HumanB.hpp day01/ex04/main.cpp day01/ex05/Karen.cpp day01/ex05/Karen.hpp day02/ex00/Fixed.cpp day02/ex00/Fixed.hpp day02/ex00/main.cpp day02/ex01/Fixed.cpp day02/ex01/Fixed.hpp day02/ex01/main.cpp day02/ex02/Fixed.cpp day02/ex02/Fixed.hpp day02/ex02/main.cpp day02/ex03/Fixed.cpp day02/ex03/Fixed.hpp day02/ex03/main.cpp day02/ex03/Point.cpp day02/ex03/Point.hpp day02/ex03/bsp.cpp day03/ex00/ClapTrap.cpp day03/ex00/ClapTrap.hpp day03/ex00/main.cpp day03/ex01/ScavTrap.cpp day03/ex01/ScavTrap.hpp day03/ex02/FragTrap.cpp day03/ex02/FragTrap.hpp day03/ex03/DiamondTrap.cpp day03/ex03/DiamondTrap.hpp day04/ex00/Animal.cpp day04/ex00/Animal.hpp day04/ex00/Dog.cpp day04/ex00/Dog.hpp day04/ex00/Cat.cpp day04/ex00/Cat.hpp day04/ex00/WrongAnimal.cpp day04/ex00/WrongAnimal.hpp day04/ex00/WrongCat.cpp day04/ex00/WrongCat.hpp day04/ex00/main.cpp day04/ex01/Brain.cpp day04/ex01/Brain.hpp)
